Overflow Issue Fixed for Popular Posts + Merged Social Login Module 🧠

--- a/src/assets/styles/utils.scss
+++ b/src/assets/styles/utils.scss
@@ -102,3 +102,7 @@
 .half-width {
   width: 50% !important;
 }
+
+.overflow-auto {
+  overflow: auto !important;
+}
